; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osSemaphoreCancellablePend.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osSemaphoreCancellablePend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i64 }

@PTE_OS_OK = common dso_local global i32 0, align 4
@SCE_KERNEL_ERROR_OK = common dso_local global i32 0, align 4
@PTE_OS_TIMEOUT = common dso_local global i32 0, align 4
@PTE_OS_INTERRUPTED = common dso_local global i32 0, align 4
@POLLING_DELAY_IN_us = common dso_local global i32 0, align 4
@PTE_OS_GENERAL_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pte_osSemaphoreCancellablePend(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8, align 1
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_6__, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %14 = call i32 (...) @sceKernelGetThreadId()
  %15 = call %struct.TYPE_5__* @getThreadData(i32 %14)
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %5, align 8
  %16 = load i32, i32* @PTE_OS_OK, align 4
  store i32 %16, i32* %7, align 4
  %17 = call i32 (...) @clock()
  store i32 %17, i32* %6, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i32 0, i32* %8, align 4
  store i8 0, i8* %9, align 1
  br label %25

21:                                               ; preds = %2
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* %22, align 4
  %24 = mul i32 %23, 1000
  store i32 %24, i32* %8, align 4
  store i8 1, i8* %9, align 1
  br label %25

25:                                               ; preds = %21, %20
  br label %26

26:                                               ; preds = %25, %72
  store i64 0, i64* %10, align 8
  %27 = load i32, i32* %3, align 4
  %28 = call i32 @sceKernelWaitSema(i32 %27, i32 1, i64* %10)
  store i32 %28, i32* %11, align 4
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* @SCE_KERNEL_ERROR_OK, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* @PTE_OS_OK, align 4
  store i32 %33, i32* %7, align 4
  br label %73

34:                                               ; preds = %26
  %35 = load i8, i8* %9, align 1
  %36 = zext i8 %35 to i32
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %46

38:                                               ; preds = %34
  %39 = call i32 (...) @clock()
  %40 = load i32, i32* %6, align 4
  %41 = sub i32 %39, %40
  %42 = load i32, i32* %8, align 4
  %43 = icmp ugt i32 %41, %42
  br i1 %43, label %44, label %46

44:                                               ; preds = %38
  %45 = load i32, i32* @PTE_OS_TIMEOUT, align 4
  store i32 %45, i32* %7, align 4
  br label %73

46:                                               ; preds = %38, %34
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %48 = icmp ne %struct.TYPE_5__* %47, null
  br i1 %48, label %49, label %70

49:                                               ; preds = %46
  %50 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %51 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @sceKernelReferSemaStatus(i32 %52, %struct.TYPE_6__* %12)
  store i32 %53, i32* %13, align 4
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* @SCE_KERNEL_ERROR_OK, align 4
  %56 = icmp eq i32 %54, %55
  br i1 %56, label %57, label %67

57:                                               ; preds = %49
  %58 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = icmp sgt i64 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %57
  %62 = load i32, i32* @PTE_OS_INTERRUPTED, align 4
  store i32 %62, i32* %7, align 4
  br label %73

63:                                               ; preds = %57
  %64 = load i32, i32* @POLLING_DELAY_IN_us, align 4
  %65 = call i32 @sceKernelDelayThread(i32 %64)
  br label %66

66:                                               ; preds = %63
  br label %69

67:                                               ; preds = %49
  %68 = load i32, i32* @PTE_OS_GENERAL_FAILURE, align 4
  store i32 %68, i32* %7, align 4
  br label %73

69:                                               ; preds = %66
  br label %70

70:                                               ; preds = %69, %46
  br label %71

71:                                               ; preds = %70
  br label %72

72:                                               ; preds = %71
  br label %26

73:                                               ; preds = %67, %61, %44, %32
  %74 = load i32, i32* %7, align 4
  ret i32 %74
}

declare dso_local %struct.TYPE_5__* @getThreadData(i32) #1

declare dso_local i32 @sceKernelGetThreadId(...) #1

declare dso_local i32 @clock(...) #1

declare dso_local i32 @sceKernelWaitSema(i32, i32, i64*) #1

declare dso_local i32 @sceKernelReferSemaStatus(i32, %struct.TYPE_6__*) #1

declare dso_local i32 @sceKernelDelayThread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
